tests/sksl/errors/OpaqueTypeConstruction.glsl
### Compilation failed:

error: 4: cannot construct 'sampler'
1 error
